# ros_m5core

./: .gitmodules  README.md  sdkconfig
components/FastLED/: CMakeLists.txt
components/FastLED-idf/: component.mk
components/M5Unit-Scales/: CMakeLists.txt  component.mk
components/M5core2/: CMakeLists.txt
docker/: Dockerfile  build.sh  run.sh
docker/dev/: Dockerfile
docker/ros1_bridge/: Dockerfile  build.sh  run.sh
main/: CMakeLists.txt  bytes.cpp  bytes.h  doorbell.h  i2c.h  main.cpp  pcm_converter.cpp  sound.h  tof.h
